demos/nyc-transit/add-ons/billing-service/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: billing-service
  name: billing-service
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app.kubernetes.io/instance: billing-service
