demos/nyc-transit/add-ons/billing-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:  
  name: billing-service 
spec:
  port:
    targetPort: 8081
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: billing-service
    weight: 100
